test/bad/tuples/tuple08.px

func f(): Void def
    return

0, f()
